--- a/ejecutar-sp/index.html
+++ b/ejecutar-sp/index.html
@@ -18,6 +18,7 @@
             <a class="btn btn-primary p-2 m-2" href="./html/sp_trans.html">Realizar Transaccion</a>
             <a class="btn btn-primary p-2 m-2" href="./html/crearCliente.html">Crear cliente</a>
             <a class="btn btn-primary p-2 m-2" href="./html/crearCuetan.html">Crear cuenta</a>
+            <a class="btn btn-primary p-2 m-2" href="./html/backup.html">Crear Backup</a>
         </div>
     </div>
 
