--- a/ejecutar-sp/html/backup.html
+++ b/ejecutar-sp/html/backup.html
@@ -16,7 +16,7 @@
         <h1 class="text-center">Realizar BackUp</h1>
         <form id="miFormulario">
             <div class="mb-3">
-                <label for="Dir" class="col-form-label">Seleccione la ubicación para guardar el archivo:</label>
+                <label for="Dir" class="col-form-label">Coloque la ubicación para guardar el archivo:</label>
                 <input type="text" id="Dir" class="form-control" aria-describedby="DirHelp">
               </div>
 
